# snabix-telegram-bot

./: .env.example  .gitignore  README.md  Taskfile.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: BOT_ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  RELEASE_CHECKLIST.md  SECRETS.md  TESTING_STRATEGY.md
scripts/: check_production_secrets.py
src/snabix_bot/: __init__.py  __main__.py  app.py  config.py
src/snabix_bot/clients/: backend.py
src/snabix_bot/handlers/: admin.py  callbacks.py  common.py  errors.py
src/snabix_bot/handlers/admin/: __init__.py  callback_data.py  callbacks.py  command_sync.py  formatters.py  keyboards.py  status_handlers.py
src/snabix_bot/schemas/: __init__.py  backend.py
src/snabix_bot/services/: access.py  commands.py
tests/: test_settings.py
